remove other collectors.toList