@@ -14,7 +14,6 @@
 package tech.pegasys.teku.validator.client.loader;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static java.util.stream.Collectors.toList;
 import static tech.pegasys.teku.infrastructure.json.JsonUtil.parse;
 import static tech.pegasys.teku.infrastructure.json.JsonUtil.serialize;
 import static tech.pegasys.teku.infrastructure.logging.StatusLogger.STATUS_LOG;
@@ -107,7 +106,7 @@ public class ExternalValidatorSource extends AbstractValidatorSource implements 
 
     // Load from files
     final List<File> files = getValidatorFiles();
-    return files.stream().map(this::getValidatorProvider).collect(toList());
+    return files.stream().map(this::getValidatorProvider).toList();
   }
 
   private List<ValidatorProvider> getAvailableReadOnlyValidators() {
@@ -125,7 +124,7 @@ public class ExternalValidatorSource extends AbstractValidatorSource implements 
                     externalSignerTaskQueue,
                     metricsSystem,
                     readOnly))
-        .collect(toList());
+        .toList();
   }
 
   private List<File> getValidatorFiles() {
